@@ -7,9 +7,7 @@ import com.maxima.orderService.mapper.ProductMapper;
 import com.maxima.orderService.repository.ProductRepository;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -22,15 +20,15 @@ public class ProductServiceImpl implements ProductService {
 
   private final ProductRepository repository;
 
-  @Qualifier("productMapper")
-  private final ProductMapper mapper;
+
+  private final ProductMapper productMapper;
 
   @Override
   @Transactional
   public ProductViewDto create(ProductCreateDto dto) throws ResponseException {
-    var entity = mapper.toEntity(dto);
+    var entity = productMapper.toEntity(dto);
     entity = repository.save(entity);
-    return mapper.toDto(entity);
+    return productMapper.toDto(entity);
   }
 
   @Override
@@ -38,15 +36,15 @@ public class ProductServiceImpl implements ProductService {
   public List<ProductViewDto> getList() {
     return repository.findAll()
         .stream()
-        .map(mapper::toDto)
-        .collect(Collectors.toList());
+        .map(productMapper::toDto)
+        .toList();
   }
 
   @Override
   @Transactional(readOnly = true)
   public ProductViewDto find(UUID uuid) throws ResponseException {
     var entity = repository.getByUuid(uuid);
-    return mapper.toDto(entity);
+    return productMapper.toDto(entity);
   }
 
   @Override
@@ -54,9 +52,9 @@ public class ProductServiceImpl implements ProductService {
   public ProductViewDto update(UUID uuid, ProductCreateDto productCreateDto)
       throws ResponseException {
     var entity = repository.getByUuid(uuid);
-    mapper.update(productCreateDto, entity);
+    productMapper.update(productCreateDto, entity);
     entity = repository.save(entity);
-    return mapper.toDto(entity);
+    return productMapper.toDto(entity);
   }
 
   @Override
